[package]
name = "ink"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.98"
async-session = "3.0.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = [ "typed-header" ] }
axum-reverse-proxy = "1.0.3"
base64 = "0.22.1"
bollard = "0.19.1"
dotenv = "0.15.0"
futures-util = "0.3.31"
http = "1.3.1"
hyper = { version = "1.6.0", features = [ "full" ] }
hyper-util = { version = "0.1.14", features = [ "client-legacy" ] }
oauth2 = "4.4.2"
rand = "0.9.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.219"
sha1 = "0.10.6"
sqlite = "0.37.0"
tokio = { version = "1.45.1", features = ["full" ] }
tokio-tungstenite = "0.27.0"
tower = { version = "0.5.2", features = [ "util" ] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
url = "2.5.4"
